--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <section class="header">
-    <a href="#" class="header__logo"></a>
+    <div class="container">
     <ul class="header__list">
         <li class="header__item">Главная</li>
         <li class="header__item">Наши проекты</li>
@@ -7,4 +7,5 @@
         <li class="header__item">Новости</li>
         <li class="header__item">Контакты</li>
     </ul>
+    </div>
 </section>
