--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,3 +6,6 @@
 // Стили для файла с примером HTML-фрагмента
 @import './header';
 @import './general';
+@import './container';
+@import './hero';
+@import './description';
